--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "chart.js": "^4.4.0",
     "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1"
+    "html2canvas": "^1.4.1",
+    "electron-notification-state": "^1.0.0"
   },
   "build": {
     "appId": "com.pynk.desktop",
@@ -29,6 +30,19 @@
     "files": [
       "src/**/*",
       "node_modules/**/*"
-    ]
+    ],
+    "win": {
+      "target": ["nsis"],
+      "icon": "src/icon.ico"
+    },
+    "mac": {
+      "target": ["dmg"],
+      "icon": "src/icon.png"
+    },
+    "linux": {
+      "target": ["AppImage", "deb"],
+      "icon": "src/icon.png",
+      "category": "Network;Utility"
+    }
   }
 }
