--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder",
-    "dev": "electron . --dev"
+    "build": "electron-packager . pynk --platform=darwin --arch=x64 --out=dist/ --overwrite",
+    "build-win": "electron-packager . pynk --platform=win32 --arch=x64 --out=dist/ --overwrite",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
+    "dist-mac": "electron-builder --mac --universal"
   },
   "keywords": ["network", "ping", "monitoring", "electron"],
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
     "electron": "^27.0.0",
-    "electron-builder": "^24.6.4"
+    "electron-packager": "^17.1.2",
+    "electron-builder": "^26.0.12"
   },
   "dependencies": {
     "chart.js": "^4.4.0",
