--- a/package.json
+++ b/package.json
@@ -41,9 +41,7 @@
       "node_modules/**/*"
     ],
     "win": {
-      "target": [
-        "nsis"
-      ],
+      "target": "nsis",
       "icon": "src/icon.ico"
     },
     "mac": {
