--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Network monitoring and ping analysis desktop application",
   "main": "src/main.js",
   "scripts": {
-    "start": "electron .",
-    "build": "electron-packager . pynk --platform=darwin --arch=x64 --out=dist/ --overwrite",
-    "build-win": "electron-packager . pynk --platform=win32 --arch=x64 --out=dist/ --overwrite",
+    "start": "electron . --disable-gpu",
+    "build-win": "electron-packager . bind --platform=win32 --arch=x64 --out=dist/ --overwrite",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
     "dist-mac": "electron-builder --mac --universal"
